barrels can fail